--- a/scripts/examples/Embedding Example.ipynb
+++ b/scripts/examples/Embedding Example.ipynb
@@ -6,12 +6,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import os\n",
+    "os.chdir('../')\n",
     "import faceFinder as ff"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {
     "scrolled": false
    },
